# harps

./: AUTHORS  Doxyfile  Makefile.am  Makefile.in  aclocal.m4  config.hpp.in  configure  configure.in  harps.kdevelop  harps.kdevelop.pcs  harps.kdevses  harps.tag
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
html/: add_8hpp-source.html  alsa_8hpp-source.html  annotated.html  branchbynote_8hpp-source.html  buffer_8hpp-source.html  classharps_1_1Buffer-members.html  classharps_1_1Buffer.html  classharps_1_1Clock-members.html  classharps_1_1Clock.html  classharps_1_1ClockMatrixCalc.html  classharps_1_1ClockMatrixCalc_3_01KEY_01_4-members.html  classharps_1_1ClockMatrixCalc_3_01KEY_01_4.html  classharps_1_1ClockMatrixCalc_3_01LOCAL_01_4-members.html  classharps_1_1ClockMatrixCalc_3_01LOCAL_01_4.html  classharps_1_1ClockMatrixCalc_3_01TONE_01_4-members.html  classharps_1_1ClockMatrixCalc_3_01TONE_01_4.html  classharps_1_1CurrentTime-members.html  classharps_1_1CurrentTime.html  classharps_1_1DynamicModuleSlot-members.html  classharps_1_1DynamicModuleSlot.html  classharps_1_1DynamicModuleSocket-members.html  classharps_1_1DynamicModuleSocket.html  classharps_1_1DynamicMonophony-members.html  classharps_1_1DynamicMonophony.html  classharps_1_1DynamicPolyphony-members.html  classharps_1_1DynamicPolyphony.html  classharps_1_1HarpsException-members.html  classharps_1_1HarpsException.html  classharps_1_1ModuleNotFound-members.html  classharps_1_1ModuleNotFound.html  classharps_1_1Normalizer-members.html  classharps_1_1Normalizer.html  classharps_1_1Note-members.html  classharps_1_1Note.html  classharps_1_1SharedBuffer-members.html  classharps_1_1SharedBuffer.html  classharps_1_1SinkConfigurationFailed-members.html  classharps_1_1SinkConfigurationFailed.html  classharps_1_1SinkOutputFailed-members.html  classharps_1_1SinkOutputFailed.html  (+130 more)
include/: Makefile.am  Makefile.in
include/harps/: buffer.hpp  clock.hpp  config.hpp.in  dummy.hpp  exceptions.hpp  instrument.hpp  normalize.hpp  note.hpp  shared_buffer.hpp  time.hpp  utils.hpp
include/harps/compornent/: add.hpp  branchbynote.hpp  combiner.hpp  constant.hpp  constant_mul.hpp  distotion.hpp  dynamic_module.hpp  envelope.hpp  envelope2.hpp  fm.hpp  generator.hpp  mix.hpp  mul.hpp  noize.hpp  normalize.hpp  rectangle.hpp  scale.hpp  shift.hpp  sine.hpp  switching_envelope.hpp  touch.hpp  triangle.hpp  vector.hpp  volume.hpp  wave.hpp
include/harps/input/: simple.hpp
include/harps/output/: alsa.hpp  wave.hpp
include/harps/table/: exp2.hpp  sine.hpp
latex/: annotated.tex  classharps_1_1Buffer.tex  classharps_1_1Clock.eps  classharps_1_1Clock.tex  classharps_1_1ClockMatrixCalc.tex  classharps_1_1ClockMatrixCalc_3_01KEY_01_4.tex  classharps_1_1ClockMatrixCalc_3_01LOCAL_01_4.tex  classharps_1_1ClockMatrixCalc_3_01TONE_01_4.tex  classharps_1_1CurrentTime.eps  classharps_1_1CurrentTime.tex  classharps_1_1DynamicModuleSlot.tex  classharps_1_1DynamicModuleSocket.tex  classharps_1_1DynamicMonophony.tex  classharps_1_1DynamicPolyphony.tex  classharps_1_1HarpsException.eps  classharps_1_1HarpsException.tex  classharps_1_1ModuleNotFound.eps  classharps_1_1ModuleNotFound.tex  classharps_1_1Normalizer.tex  classharps_1_1Note.tex  classharps_1_1SharedBuffer.tex  classharps_1_1SinkConfigurationFailed.eps  classharps_1_1SinkConfigurationFailed.tex  classharps_1_1SinkOutputFailed.eps  classharps_1_1SinkOutputFailed.tex  classharps_1_1UnableToCreateInstance.eps  classharps_1_1UnableToCreateInstance.tex  classharps_1_1UnableToOpenSink.eps  classharps_1_1UnableToOpenSink.tex  classharps_1_1compornent_1_1Add.tex  classharps_1_1compornent_1_1Add_3_01_01_4.tex  classharps_1_1compornent_1_1BranchByNote.tex  classharps_1_1compornent_1_1Constant.tex  classharps_1_1compornent_1_1ConstantMul.tex  classharps_1_1compornent_1_1Distotion.tex  classharps_1_1compornent_1_1Envelope.tex  classharps_1_1compornent_1_1Envelope2.tex  classharps_1_1compornent_1_1Envelope2_3_01__clock__select_00_01__delay_00_01__attack_00_01__atta211bf396f5638f048319b2d4e63e7d8c.tex  classharps_1_1compornent_1_1Envelope_3_01__clock__select_00_01__delay_00_01__attack_00_01__hold_396210224e615d03f376f3377e02eb68.tex  classharps_1_1compornent_1_1FFT.tex  (+35 more)
src/: Makefile.am  Makefile.in  envelope.cpp  exp2_table.cpp  harps.pc.in  module_dir.cpp  sin_table.cpp
templates/: h
xml/: add_8hpp.xml  alsa_8hpp.xml  branchbynote_8hpp.xml  buffer_8hpp.xml  classharps_1_1Buffer.xml  classharps_1_1Clock.xml  classharps_1_1ClockMatrixCalc.xml  classharps_1_1ClockMatrixCalc_3_01KEY_01_4.xml  classharps_1_1ClockMatrixCalc_3_01LOCAL_01_4.xml  classharps_1_1ClockMatrixCalc_3_01TONE_01_4.xml  classharps_1_1CurrentTime.xml  classharps_1_1Dummy.xml  classharps_1_1DynamicModuleSlot.xml  classharps_1_1DynamicModuleSocket.xml  classharps_1_1DynamicMonophony.xml  (+119 more)
