nobase_include_HEADERS = \
./harps/utils.hpp \
./harps/time.hpp \
./harps/output/alsa.hpp \
./harps/output/wave.hpp \
./harps/table/exp2.hpp \
./harps/table/sine.hpp \
./harps/normalize.hpp \
./harps/note.hpp \
./harps/buffer.hpp \
./harps/dummy.hpp \
./harps/clock.hpp \
./harps/shared_buffer.hpp \
./harps/compornent/touch.hpp \
./harps/compornent/dynamic_module.hpp \
./harps/compornent/sine.hpp \
./harps/compornent/constant_mul.hpp \
./harps/compornent/mix.hpp \
./harps/compornent/constant.hpp \
./harps/compornent/shift.hpp \
./harps/compornent/envelope.hpp \
./harps/compornent/envelope2.hpp \
./harps/compornent/switching_envelope.hpp \
./harps/compornent/normalize.hpp \
./harps/compornent/scale.hpp \
./harps/compornent/generator.hpp \
./harps/compornent/fm.hpp \
./harps/compornent/distotion.hpp \
./harps/compornent/add.hpp \
./harps/compornent/mul.hpp \
./harps/compornent/rectangle.hpp \
./harps/compornent/branchbynote.hpp \
./harps/compornent/noize.hpp \
./harps/compornent/combiner.hpp \
./harps/compornent/wave.hpp \
./harps/compornent/triangle.hpp \
./harps/compornent/volume.hpp \
./harps/input/simple.hpp \
./harps/instrument.hpp \
./harps/exceptions.hpp \
./harps/config.hpp
